fix carousel alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -359,11 +359,17 @@ article {
   grid-gap:0 50px;  
 }
 
+/* #proj-cont {
+  background-color: var(--orange);
+  color:white;
+} */
+
 .content-box{
   /* display:grid;
   grid-template-columns:minmax(auto,600px); 
  */
-  width:350px;
+  width: 400px;;
+  xpadding:40px;
 }
 
 .list-icons{
@@ -687,6 +693,30 @@ footer {
   transform: translateY(-50%);
 }
 
+#show-projects {
+  height:auto;
+  width:auto;
+}
+
+.expand {
+  /* position : absolute; */
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  background:var(--orange);
+  border: none;
+  /* no svg fallback */
+  font-size: 30px;
+  color: white;
+  transform: translateY(-50%);
+  margin:50px 0px 0px 10px;
+  cursor: pointer;
+}
+
+.expand:hover {
+  opacity:0.7;
+}
+
 .prev-next-button:hover {
   background-color:var(--orange);
 }
@@ -731,7 +761,7 @@ footer {
 
 .content-container {
   height:100%;
-  width:100%;
+  width:800px;
   padding:10px;
   overflow:hidden;
 }
